test/expected/declare_frg_v.out
declare f as function (i as register) returning void
                       ^
24: error: named parameters can not be void
